@@ -1,3 +1,4 @@
+-All spooky mod UI (except for little eyes quest UI) are now draggable, and the config option previously called "draggable bloom buff UI" is now just "draggable spooky mod UI" and applies to all draggable spooky mod UIs
 -Added new colored gourd blocks, walls, and platforms
 -Lowered the volume on the flower armor flower pot running sound
 -Buffed spider stabber and reduced the amount of spider chitin in its crafting recipe
